@@ -74,7 +74,7 @@ extern byte blows_table[12][12];
 extern owner_type owners[MAX_STORES][MAX_OWNERS];
 extern byte extract_energy[256];
 extern byte level_speeds[501];
-extern s32b player_exp[PY_MAX_LEVEL];
+extern s32b player_exp[PY_MAX_LEVEL + 1];
 extern player_race race_info[MAX_RACES];
 extern player_class class_info[MAX_CLASS];
 extern player_magic magic_info[MAX_CLASS];
@@ -911,7 +911,7 @@ extern bool cure_serious_wounds_proj(int Ind, int dir);
 extern bool cure_critical_wounds_proj(int Ind, int dir);
 extern bool heal_other_proj(int Ind, int dir);
 extern bool door_creation(int Ind);
-extern bool trap_creation(int Ind, int mod);
+extern bool trap_creation(int Ind, int mod, int rad);
 extern bool destroy_doors_touch(int Ind);
 extern bool sleep_monsters_touch(int Ind);
 extern bool create_artifact(int Ind);
