@@ -4990,12 +4990,12 @@ bool door_creation(int Ind)
 	return (project(0 - Ind, 1, &p_ptr->wpos, p_ptr->py, p_ptr->px, 0, GF_MAKE_DOOR, flg));
 }
 
-bool trap_creation(int Ind, int mod)
+bool trap_creation(int Ind, int mod, int rad)
 {
 	player_type *p_ptr = Players[Ind];
 
 	int flg = PROJECT_GRID | PROJECT_ITEM | PROJECT_HIDE;
-	return (project(0 - Ind, 1, &p_ptr->wpos, p_ptr->py, p_ptr->px, mod, GF_MAKE_TRAP, flg));
+	return (project(0 - Ind, rad, &p_ptr->wpos, p_ptr->py, p_ptr->px, mod, GF_MAKE_TRAP, flg));
 }
 
 bool destroy_doors_touch(int Ind)
